--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -21,7 +21,7 @@
   flex: 1;
   flex-direction: column;
   max-width: $max-width;
-  padding: 0 1em;
+  padding: 0 0.5em;
 
   @include sm {
     flex-direction: row;
@@ -53,12 +53,9 @@
   &__list {
     display: flex;
     flex-direction: column;
-    padding: 0 0.5em;
 
     @include sm {
       flex-direction: row;
-      justify-content: flex-end;
-      padding: 0;
     }
   }
 
